--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@ IMG {
 	border: 0;
 }
 
-a 	{  text-decoration: none; color: rgb(0,63,127); }
-a:hover {  text-decoration: underline; color: rgb(0,63,127); }
+a 	{  text-decoration: underline; color: rgb(0,63,127); }
+a:hover {  text-decoration: none; color: rgb(0,63,127); }
 
 ul {
 	padding-left: 20px;
